# vibe-on

./: .gitignore  DESIGN_UNIFICATION_DISCUSSION.md  IMPROVEMENT_MILESTONES_2026-03-24.md  MOBILE_APP_SPECIFICATION.md  MOBILE_DESIGN_SYSTEM.md  README.md  UI_SNAPSHOT_TEMP.txt  WEBSOCKET_PROTOCOL.md  eslint.config.mjs  index.html  lint_errors.json  package-lock.json  package.json  reproduce_lyrics.py  tailwind.config.js  test_merge  test_merge.rs  vite.config.ts
.github/workflows/: ci.yml
MD Files/: ANDROID_STREAMING_INTEGRATION.md  DESKTOP_PROTOCOL.md  DETAILED_CHANGELOG.md  IMPLEMENTATION_COMPLETE.md  MOBILE_APP_SPECIFICATION.md  MOBILE_CONNECTION_TROUBLESHOOTING.md  MOBILE_DESIGN_SYSTEM.md  MOBILE_FIX_QUICK_REF.md  MOBILE_PC_CONNECTION_FIX.md  MOBILE_PROTOCOL.md  MOBILE_STREAMING_IMPLEMENTATION.md  QUICK_START.md  SERVER_CODE_ANALYSIS.md  STREAMING_API.md  STREAMING_IMPLEMENTATION.md  VERIFICATION_REPORT.md  designguidelines.md  ✅_COMPLETE.md  📚_DOCUMENTATION_INDEX.md
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  output.txt  tauri.conf.json
src-tauri/capabilities/: default.json  ytmusic.json
src-tauri/icons/: icon.icns
src-tauri/src/: cover_fetcher.rs  discord_rpc.rs  lib.rs  lyrics_fetcher.rs  lyrics_transliteration.rs  main.rs  stats_v2.rs  taskbar_controls.rs  youtube_searcher.rs  yt_inject.js
src-tauri/src/audio/: equalizer.rs  fft.rs  media_controls.rs  mod.rs  player.rs  reverb.rs  state.rs
src-tauri/src/database/: db.rs  mod.rs  schema.rs
src-tauri/src/p2p/: buffer.rs  discovery.rs  mod.rs  protocol.rs  transport.rs
src-tauri/src/server/: mod.rs  routes.rs  websocket.rs
src-tauri/src/stats/: mod.rs
src-tauri/src/torrent/: mod.rs  search.rs
src-tauri/tests/: test_transliteration.rs
src/components/: AlbumGrid.css  AlbumGrid.tsx  AmbientBackground.tsx  ArtistList.tsx  AudioVisualizer.tsx  ContextMenu.tsx  CurvedList.tsx  Equalizer.tsx  FavoritesView.tsx  FloatingLyricsApp.tsx  GlobalEffects.tsx  Header.css  Header.tsx  HomeView.tsx  Icons.tsx  ImmersiveView.tsx  LyricsPanel.tsx  MiniPlayer.tsx  MobilePairingPopup.tsx  PlayerBar.css  PlayerBar.tsx  PlaylistCreationWizard.tsx  PlaylistDialog.tsx  PlaylistView.tsx  RightPanel.tsx  RippleEffect.tsx  SearchBar.tsx  SettingsPage.tsx  ShapeComponents.tsx  SideLyrics.tsx  Sidebar.tsx  Skeleton.tsx  SquigglySlider.tsx  Statistics2.tsx  StatisticsPage.tsx  ThemeManager.tsx  TitleBar.css  TitleBar.tsx  Toast.tsx  TorrentAddModal.tsx  (+11 more)
src/components/common/: ContextMenu.tsx  Icons.tsx  MarqueeText.tsx  RippleEffect.tsx  ShapeComponents.tsx
src/components/layout/: AmbientBackground.tsx  Header.tsx  RightPanel.tsx  SearchBar.tsx  Sidebar.tsx  TitleBar.tsx
src/components/mood/: TrackStats.tsx  index.tsx
src/components/playback/: Equalizer.tsx  ImmersiveView.tsx  LyricsPanel.tsx  MiniPlayer.tsx  PlayerBar.tsx  SideLyrics.tsx
src/components/playlist/: PlaylistCreationWizard.tsx  PlaylistDialog.tsx  PlaylistView.tsx
src/components/stats/: Statistics2.tsx  StatisticsPage.tsx
src/components/system/: FloatingLyricsApp.tsx  GlobalEffects.tsx  MobilePairingPopup.tsx  SettingsPage.tsx  ThemeManager.tsx  Toast.tsx
src/components/torrent/: TorrentBrowser.tsx  TorrentDetailsModal.tsx  TorrentManager.tsx  TorrentSearch.tsx
src/hooks/: useCoverArt.ts  useCurrentCover.ts  useImageColors.ts  useMediaSession.ts
src/store/: lyricsStore.ts  mobileStore.ts  navigationStore.test.ts  navigationStore.ts  playerStore.test.ts  playerStore.ts  playlistStore.ts  settingsStore.test.ts  settingsStore.ts  themeStore.ts  toastStore.ts  visualizerStore.ts
src/types/: index.ts  kuroshiro.d.ts  mood.ts
src/utils/: formatTime.test.ts  formatTime.ts  lyricsUtils.ts  textUtils.ts  windowUtils.ts  ytTheme.ts
