[package]
name = "vibe-on"
version = "0.1.2"
description = "A beautiful music player with great features to download songs."
authors = ["MemestaVedas"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vibe_on_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mdns-sd = "0.13"

# Audio playback
rodio = { version = "0.20", features = ["symphonia-all"] }

# Metadata extraction
lofty = "0.22"

# Parallel processing
rayon = "1.10"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1.10", features = ["v4", "fast-rng"] }
discord-rich-presence = "0.2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
urlencoding = "2.1"
souvlaki = "0.7"
tauri-plugin-single-instance = { version = "2.3.7", features = ["deep-link"] }
raw-window-handle = "0.6"
librqbit = "8.1.1"
tokio = { version = "1.49.0", features = ["full"] }
scraper = "0.19.0"

# P2P streaming
libp2p = { version = "0.54", features = [
    "tokio",
    "quic",
    "noise",
    "yamux",
    "mdns",
    "identify",
    "relay",
    "dcutr",
    "autonat",
    "macros",
    "request-response",
    "cbor",
] }
tokio-stream = "0.1"
bytes = "1.6"
futures = "0.3"

# HTTP/WebSocket server
axum = { version = "0.7", features = ["ws", "macros"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip"] }

# Utilities
hostname = "0.4"
serde_cbor = "0.11"
log = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
] }
# Enable high optimization for dependencies in dev/debug mode
# This is crucial for real-time audio decoding performance without stuttering
[profile.dev.package."*"]
opt-level = 3

